<resources>
    <string name="app_name">VizzTablet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="in_login_email">Email</string>
    <string name="in_login_email_hint">Enter your email address</string>
    <string name="in_login_password">Password</string>
    <string name="in_login_password_hint">Enter your password</string>
    <string name="in_login_sign_in">Sign in</string>
    <string name="in_login_switch_sign_up">If you do not have an account, sign up from here please!</string>
    <string name="in_register_email_hint">Enter your email address</string>
    <string name="in_register_email">Email</string>
    <string name="in_register_password">Password</string>
    <string name="in_register_password_hint">Enter your password</string>
    <string name="in_register_re_enter_password">Re-Enter Password</string>
    <string name="in_register_re_enter_password_hint">Re-Enter your password</string>
    <string name="in_register_location">Location</string>
    <string name="in_register_location_hint">Enter company Address</string>
    <string name="in_register_sign_up">Sign Up</string>
    <string name="in_register_sign_in_text">If you have an account, sign in from here please!</string>
    <string name="in_home_welcome">Welcome!</string>
    <string name="in_home_scan_qr">Please scan the QR code.</string>
    <string name="in_home_secured_by_vizz">Protected by Vizz LLC</string>
    <string name="in_home_order_code">Order ID</string>
    <string name="in_home_customer_name">Customer Name</string>
    <string name="in_home_order_status">Order Status</string>
    <string name="in_register_password_error_hint">It is not same!</string>
    <string name="in_register_upload_image">Upload logo (optional)</string>
    <string name="in_error_text">Error Happened!</string>
    <string name="in_error_try_again">Try Again!</string>
    <string name="in_loading">Loading…</string>

</resources>