<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.samraa.vizztablet.ui.auth.login.LoginVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context="com.samraa.vizztablet.ui.auth.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@drawable/ic_background" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.64"
                android:background="@color/black" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_background">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/appIc"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="56dp"
                android:src="@drawable/ic_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/emailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/helvetica"
                android:text="@string/in_login_email"
                android:textColor="@color/navy_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/emailEditTxt"
                app:layout_constraintTop_toBottomOf="@id/appIc" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTxt"
                style="@style/Widget.Vizz.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="124dp"
                android:layout_marginTop="2dp"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/emailTxt">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/helvetica"
                    android:hint="@string/in_login_email_hint"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/navy_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailTxt" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                isVisibleElseGone="@{!viewModel.isEmailValid}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="It is not valid!"
                android:textColor="@color/red"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/emailEditTxt"
                app:layout_constraintTop_toBottomOf="@id/emailEditTxt" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/passwordTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/helvetica"
                android:text="@string/in_login_password"
                android:textColor="@color/navy_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/passwordEdtTxt"
                app:layout_constraintTop_toBottomOf="@id/emailEditTxt" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEdtTxt"
                style="@style/Widget.Vizz.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="124dp"
                android:layout_marginTop="2dp"
                app:endIconDrawable="@drawable/ic_eye"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/eye_icon_color"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/passwordTxt">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&amp;*()"
                    android:fontFamily="@font/helvetica"
                    android:hint="@string/in_login_password_hint"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/navy_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailEditTxt" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInButton"
                style="@style/Widget.Vizz.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="124dp"
                android:layout_marginTop="32dp"
                android:enabled="@{viewModel.enableSignInButton}"
                android:text="@string/in_login_sign_in"
                app:layout_constraintTop_toBottomOf="@id/passwordEdtTxt" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signUpTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/in_login_switch_sign_up"
                android:textColor="@color/blue"
                android:textSize="14sp"
                app:fontFamily="@font/helveticaoblique"
                app:layout_constraintEnd_toEndOf="@id/signInButton"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/signInButton"
                app:layout_constraintTop_toBottomOf="@id/signInButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>